--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bs58": "^6.0.0",
     "dotenv": "^17.0.1",
     "ethers": "^6.15.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "lucide-react": "^0.525.0"
   }
 }
