--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "dotenv": "^17.0.1",
     "ethers": "^6.15.0",
     "fs": "^0.0.1-security",
-    "lucide-react": "^0.525.0"
+    "lucide-react": "^0.525.0",
+    "alchemy-sdk": "^3.6.1",
+    "express": "^5.1.0",
+    "web3": "^4.16.0"
   }
 }
