--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@wormhole-foundation/sdk-evm": "^2.4.0",
     "@wormhole-foundation/sdk-solana": "^2.4.0",
     "@wormhole-foundation/sdk-solana-tokenbridge": "^2.4.0",
+    "alchemy-sdk": "^3.6.1",
     "bs58": "^6.0.0",
     "dotenv": "^17.0.1",
     "ethers": "^6.15.0",
-    "fs": "^0.0.1-security",
-    "lucide-react": "^0.525.0",
-    "alchemy-sdk": "^3.6.1",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "got": "^14.4.7",
+    "lucide-react": "^0.525.0",
     "web3": "^4.16.0"
   }
 }
